# escape-utf8

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  version.h
haskell/: escape.hs
haskell/ci/: ciscript.sh  win_ciscript.ps1
java/: BusinessLogic.java  Escape.java  README.md  StreamPair.java  StreamPairException.java  ciscript.sh  run.sh  winrun.c
java/ci/: CMakeLists.txt  use_adoptopenjdk.sh  win_ciscript.ps1
src/: StreamPair.cpp  StreamPair.h  business_logic.cpp  business_logic.h  main.cpp  parseargs.cpp  parseargs.h
test/: integration_tests.py  test.cpp  unit_tests_business_logic.cpp  unit_tests_parseargs.cpp
test/vcs_testcases/: README.md  bom  crlf  hearteyes
